mobile horizontal scroll kinda fixed

--- a/scss/1-abstracts/_mixins.scss
+++ b/scss/1-abstracts/_mixins.scss
@@ -68,7 +68,6 @@
         }
 
         display: inline-block;
-
         margin: 0 15px;
 
         @include mobile {
@@ -79,6 +78,14 @@
 
 @mixin vertical-list {
     @include reset-list;
+
+    @include mobile {
+        overflow-x: scroll;
+
+        li {
+            display: table-cell;
+        }
+    }
 
     li {
         margin: 10px 0;
