--- a/scss/3-components/_tab.scss
+++ b/scss/3-components/_tab.scss
@@ -134,6 +134,13 @@
         font-size: 18px;
         margin-left: 20px;
 
+        @include mobile {
+            padding: 10px;
+            border-left: none !important;
+            margin: 0 20px 0 0;
+            padding: 30px;
+        }
+
         &:hover {
             border-left: 5px solid darken(#ccc, 20%);
             color: darken(#ccc, 40%);
